Footer feature created

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $fz-16: 1rem;
 $fz-17: rem(17px);
 $fz-20: rem(20px);
 $fz-21: rem(21px);
+$fz-26: rem(26px);
 $fz-30: rem(30px);
 $fz-32: rem(32px);
 $fz-35: rem(35px);
@@ -46,6 +47,8 @@ $fz-contact-heading: $fz-49;
 $fz-contact-heading-mobile: $fz-40;
 $fz-contact-label: $fz-11;
 $fz-contact-consent: $fz-12;
+$fz-footer-copyright: $fz-11;
+$fz-logo-small: $fz-26;
 $fz-logo-big: $fz-32;
 $fz-btn: $fz-13;
 $fz-btn-hero: $fz-16;
