--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -27,14 +27,14 @@
         content: "";
         width: 27px;
         height: 27px;
-        background: url("../../assets/mail-icon.svg") no-repeat center / cover;
+        background: url("../assets/mail-icon.svg") no-repeat center / cover;
         margin-right: 10px;
       }
       &--phone::before {
         content: "";
         width: 27px;
         height: 27px;
-        background: url("../../assets/phone-icon.svg") no-repeat center / cover;
+        background: url("../assets/phone-icon.svg") no-repeat center / cover;
         margin-right: 10px;
       }
     }
@@ -98,7 +98,7 @@
     }
 
     &:checked {
-      background: url("../../assets/checkmark.svg") no-repeat center;
+      background: url("../assets/checkmark.svg") no-repeat center;
     }
   }
 }
