--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -35,6 +35,10 @@
   font-size: 1rem;
   background-color: $color-primary;
   box-shadow: 0 10px 14px $color-primary-shadow;
+  transition: 0.3s;
+  &:hover {
+    background-color: $color-primary-dark;
+  }
 }
 
 .hero__bg-image {
